- Add bookGenerator module - link index with module type

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <p>AwesomeBook © 2023</p>
     </footer>
     <script src='https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js'></script>
-    <script src="./js/index.js" type="module"></script>
+    <script src="./index.js" type="module"></script>
   </body>
 
 </html>
